# cut-gnn

./: .gitignore  README.md  pyproject.toml  supervised.py  unsupervised.py
cut_gnn/: supervised.py  unsupervised.py
cut_gnn/datasets/: __init__.py  graph_dataset.py  iris_mp.py
cut_gnn/losses/: ccl.py
cut_gnn/metrics/: __init__.py  obj_ratio.py  rel_cost.py
cut_gnn/models/: cut_gcn.py  mlp_edge_classifier.py
cut_gnn/models/layers/: __init__.py  cut_gcn_conv.py  weight_embedding.py
cut_gnn/postprocess/: segmentation.py
cut_gnn/utils/: __init__.py  ilp.py  io.py  nx.py
datasets/: __init__.py  graph_dataset.py  iris_mp.py
losses/: __init__.py  ccl.py
metrics/: __init__.py  rel_cost.py
models/: __init__.py  cut_gcn.py  mlp_edge_classifier.py
models/layers/: __init__.py  cut_gcn_conv.py  weight_embedding.py
postprocess/: segmentation.py
report/: references.bib
report/report/: report.tex
report/slides/: slides.tex
scripts/: gen_irismp_dataset.py  supervised_cli.py  unsupervised_cli.py
utils/: __init__.py  ilp.py  io.py  nx.py
